error.txt
kernel/sched/litmus.c: In function ‘litmus_schedule’:
kernel/sched/litmus.c:63:3: error: implicit declaration of function ‘is_current_running’ [-Werror=implicit-function-declaration]
   was_running = is_current_running();
   ^
kernel/sched/litmus.c: In function ‘yield_task_litmus’:
kernel/sched/litmus.c:241:2: error: implicit declaration of function ‘clear_exit_np’ [-Werror=implicit-function-declaration]
  clear_exit_np(current);
  ^
cc1: some warnings being treated as errors
make[2]: *** [kernel/sched/litmus.o] Error 1
make[1]: *** [kernel/sched] Error 2
make: *** [kernel] Error 2
make: *** Waiting for unfinished jobs....
